--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"del": "3.0.0",
 		"eslint": "4.19.1",
 		"foldero": "0.1.1",
+		"font-awesome": "^4.7.0",
 		"fs-extra": "5.0.0",
 		"gifsicle": "3.0.4",
 		"gulp": "3.9.1",
